# approxProbTraceAlign

./: .gitignore  .gitmodules  .tarvis.yaml  .travis.yml  AUTHORS  AbstractKNN.cpp  AbstractKNN.h  AlterString.cpp  AlterString.h  CMakeLists.txt  CREATED_FORK.yaml  ConfigurationFile.cpp  ConfigurationFile.h  GraphCartridge.cpp  GraphCartridge.h  LABOUR_FORK.yaml  PathVisiting.cpp  PathVisiting.h  PetriNet.cpp  PetriNet.h  QTDropdownDelegate.cpp  QTDropdownDelegate.h  QTSpinBoxDelegate.cpp  QTSpinBoxDelegate.h  README.html  README.md  RankingTest.cpp  RankingTest.h  ReadGraph.txt  Readme.md  SEPSIS_CONSTANT.yaml  SEPSIS_FORK.yaml  SimpleTraceFromFile.cpp  SimpleTraceFromFile.h  StochasticPetriNet.cpp  StochasticPetriNet.h  VpTreeProgramm.cpp  WEEKEND_FORK.yaml  benchmarks_old.cpp  configuration (copia).yaml  (+18 more)
SEPSIS_CONSTANT/: configuration.yaml  log_proposed_time.csv  out.txt
antlr4/: expression.g  probgraph.g  regex.g
antlr4/cpp/antlr4/: expression.interp  expression.tokens  expressionBaseListener.cpp  expressionBaseListener.h  expressionBaseVisitor.cpp  expressionBaseVisitor.h  expressionLexer.cpp  expressionLexer.h  expressionLexer.interp  expressionListener.cpp  expressionListener.h  expressionParser.cpp  expressionParser.h  expressionVisitor.cpp  expressionVisitor.h  regex.interp  regex.tokens  regexBaseListener.cpp  regexBaseListener.h  regexBaseVisitor.cpp  regexBaseVisitor.h  regexLexer.cpp  regexLexer.h  regexLexer.interp  regexListener.cpp  regexListener.h  regexParser.cpp  regexParser.h  regexVisitor.cpp  regexVisitor.h
cmake/: FindGraphviz.cmake  FindICU.cmake
configuration/: configuration.yaml  log_proposed_main.csv  log_proposed_time.csv
configuration_newpetri/: configuration.yaml
configuration_old/: configuration.yaml
data/: ProM610_openjdk.sh  ProM610_openjdk_local.sh  ProMPM610_openjdk.sh  download.sh  matrix.txt  matrix3.txt  matrix6.txt  matrix8.txt  petri_matrix.txt  petri_matrix_traces.txt  readme.txt
include/: ConfigurationFile.h  CopyableStack.h  GenericGraph.h  InputStream.h  Iterator.h  RankPathCollectionParameter.h  ReadGraph.h  RegexVisitor.h  ThomsonNFA.h  json.h
include/benchmarking/: BenchmarkConfiguration.h  BenchmarkSeed.h  BenchmarkStrategy.h  RankPathCollection.h  RankPathCollectionPathInfo.h  RankPathCollectionReadGraph.h  Ranking.h  ReadGraphRankingStruct.h  ScoringUtils.h  minimum_edit_maximum_substring.h
include/benchmarking/new/: LogBenchmark.h  MultithreadedBenchmarkForPooling.h  additional_benchmarks_per_log.h  benchmark_common_ground.h  minimum_edit_maximum_substring.h  record_element_per_query.h
include/benchmarking/rankings/: RankingAnalysisType.h
include/benchmarking/rows/: PrecisionBenchmarkRowEntry.h  TimeBenchmarkRowEntry.h
include/data_loading/: SimpleTraceFromFile.h  load_bpmn.h  load_data.h  load_matrix.h  load_petri_matrix.h  load_pnml.h  load_pregex.h  load_xes.h  local_load_data.h
include/data_loading/regex/: Regex.h  RegexVisitor.h
include/data_structures/: vptree.h
include/distances/: WeightEstimator.h  similarity.h
include/distances/path/: GenericPathDistance.h  GenericStringCostFunction.h  LevensteinPathSimilarity.h
include/distances/strings/: GenericStringDistance.h  GenericStringSimilarity.h  Levenstein.h  LevensteinDistance.h  (+1 more)
include/export/: MultiplePathsEmbeddingConcrete.h  SemanticInconsistencyAdapter.h
include/gui/: QTBuilder.h  QTUtils.h  WSettings.h
include/log/: LogOperationConfiguration.h  log_operations.h
include/matrix_graph_path/: ConditionalReadGraphIterable.h  PathIterator.h  path_info.h  stack_info.h
include/multithreaded/: MultithreadWrap.h  thread_pool.h
include/petrinet/: EClosPhase1.h  HalfOfEdge.h  MetaReachabilityGraph.h  PetriNet.h  RGEdge.h  ReachabilityGraph.h  pnetUtils.h
include/points/: PointClass.h  PointClassVector.h  PointTransformation.h
include/topk/: Aufgabenstellung.h  Ladenprogramm.h  TopKBenchmark.h  algorithm_map.h  basics.h  topk.h
include/utils/: AlterString.h  CmdOpts.h  ProgressBar.h  SimpleTraceFromFile.h  cfiles.h  fixed_bimap.h  hash_combine.h  language.h  matrix_iterator.h  pair_hash.h  vector_hash.h  xml_utils.h
src/: ConfigurationFile.cpp  InputStream.cpp  Iterator.cpp  ReadGraph.cpp  RegexVisitor.cpp  ThomsonNFA.cpp
src/benchmarking/: BenchmarkConfiguration.cpp  BenchmarkStrategy.cpp  RankPathCollectionPathInfo.cpp  RankPathCollectionReadGraph.cpp  Ranking.cpp  ReadGraphRankingStruct.cpp  ScoringUtils.cpp  minimum_edit_maximum_substring.cpp
src/data_loading/: load_bpmn.cpp  load_data.cpp  load_matrix.cpp  load_petri_matrix.cpp  load_pnml.cpp  load_pregex.cpp  load_xes.cpp  local_load_data.cpp
src/export/: MultiplePathsEmbeddingConcrete.cpp  SemanticInconsistencyAdapter.cpp
src/gui/: QTBuilder.cpp  QTUtils.cpp  WSettings.cpp
src/log/: LogOperationConfiguration.cpp  log_operations.cpp
src/matrix_graph_path/: ConditionalReadGraphIterable.cpp  PathIterator.cpp  path_info.cpp  stack_info.cpp
src/multithreaded/: thread_pool.cpp
src/petrinet/: EClosPhase1.cpp  MetaReachabilityGraph.cpp  PetriNet.cpp  ReachabilityGraph.cpp
src/points/: PointClass.cpp  PointClassVector.cpp  PointTransformation.cpp
src/topk/: Aufgabenstellung.cpp  Ladenprogramm.cpp  TopKBenchmark.cpp  algorithm_map.cpp  basics.cpp
src/utils/: AlterString.cpp  ProgressBar.cpp  SimpleTraceFromFile.cpp  hash_combine.cpp  xml_utils.cpp
submodules/exprtk/: exprtk.hpp
(+45 files in other folders)
